# platform.core.uifw.tizen-ws-shell

./: .gitignore  AUTHORS  COPYING  Makefile.am  configure.ac
doc/: tzsh_doc.h  tzsh_quickpanel_doc.h
packaging/: tzsh.spec
pc/: tzsh-call-service.pc.in  tzsh-call.pc.in  tzsh-common.pc.in  tzsh-indicator-service.pc.in  tzsh-indicator.pc.in  tzsh-lockscreen-service.pc.in  tzsh-lockscreen.pc.in  tzsh-quickpanel-service.pc.in  tzsh-quickpanel.pc.in  tzsh-screensaver-manager-service.pc.in  tzsh-screensaver-service.pc.in  tzsh-screensaver.pc.in  tzsh-server.pc.in  tzsh-tvservice-service.pc.in  tzsh-tvservice.pc.in  tzsh-tvsrv-service.pc.in  tzsh-tvsrv.pc.in  tzsh-volume-service.pc.in  tzsh-volume.pc.in
protocol/: .tzsh.xml.swp  tzsh.xml
src/: Makefile.am
src/examples/: Makefile.am  indicator-service.c  quickpanel-client.c  quickpanel-example.c  quickpanel-service.c  screensaver-client.c  screensaver-manager-service.c  screensaver-service.c  tvsrv-client.c  tvsrv-service.c
src/lib/: Makefile.am  Makefile_Call.am  Makefile_Indicator.am  Makefile_Lockscreen.am  Makefile_Quickpanel.am  Makefile_Screensaver.am  Makefile_Tvservice.am  Makefile_Tvsrv.am  Makefile_Volume.am
src/lib/call/: tzsh_call_service.c  tzsh_call_service.h
src/lib/common/: tzsh.c  tzsh.h  tzsh_efl.c  tzsh_efl.h  tzsh_private.h  tzsh_protect.h  tzsh_region.c  tzsh_region.h  tzsh_server.h  tzsh_service.c  tzsh_service.h
src/lib/indicator/: tzsh_indicator_service.c  tzsh_indicator_service.h
src/lib/lockscreen/: tzsh_lockscreen_service.c  tzsh_lockscreen_service.h
src/lib/quickpanel/: tzsh_quickpanel.c  tzsh_quickpanel.h  tzsh_quickpanel_service.c  tzsh_quickpanel_service.h
src/lib/screensaver/: tzsh_screensaver.c  tzsh_screensaver.h  tzsh_screensaver_manager_service.c  tzsh_screensaver_manager_service.h  tzsh_screensaver_service.c  tzsh_screensaver_service.h
src/lib/tvservice/: tzsh_tvservice_service.c  tzsh_tvservice_service.h
src/lib/tvsrv/: tzsh_tvsrv.c  tzsh_tvsrv.h  tzsh_tvsrv_service.c  tzsh_tvsrv_service.h
src/lib/volume/: tzsh_volume_service.c  tzsh_volume_service.h
src/tests/: Makefile.am  test-client.c  test-daemon.c  test-daemon.h  test-init.c  test-region.c  test-runner.c  test-service.c  test-user.c
