ACLOCAL_AMFLAGS =

MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.guess \
                       config.h.in config.sub configure install-sh \
                       ltconfig ltmain.sh missing mkinstalldirs \
                       stamp-h.in acconfig.h depcomp libtool

EXTRA_DIST = \
   README \
   AUTHORS \
   COPYING \
   COPYING-PLAIN \
   pc/tzsh-common.pc.in \
   pc/tzsh-call.pc \
   pc/tzsh-call-service.pc \
   pc/tzsh-volume.pc \
   pc/tzsh-volume-service.pc \
   pc/tzsh-lockscreen.pc \
   pc/tzsh-lockscreen-service.pc \
   pc/tzsh-indicator.pc \
   pc/tzsh-indicator-service.pc \
   pc/tzsh-quickpanel.pc \
   pc/tzsh-quickpanel-service.pc \
   pc/tzsh-tvservice.pc \
   pc/tzsh-tvservice-service.pc

dist_pkgdata_DATA = protocol/tzsh.xml

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = \
   pc/tzsh-common.pc \
   pc/tzsh-call.pc \
   pc/tzsh-call-service.pc \
   pc/tzsh-volume.pc \
   pc/tzsh-volume-service.pc \
   pc/tzsh-lockscreen.pc \
   pc/tzsh-lockscreen-service.pc \
   pc/tzsh-indicator.pc \
   pc/tzsh-indicator-service.pc \
   pc/tzsh-quickpanel.pc \
   pc/tzsh-quickpanel-service.pc \
   pc/tzsh-tvservice.pc \
   pc/tzsh-tvservice-service.pc

SUBDIRS = src
