ACLOCAL_AMFLAGS =

MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.guess \
                       config.h.in config.sub configure install-sh \
                       ltconfig ltmain.sh missing mkinstalldirs \
                       stamp-h.in acconfig.h depcomp libtool

EXTRA_DIST = \
   README \
   AUTHORS \
   COPYING \
   COPYING-PLAIN \
   pc/tzsh-server.pc \
   pc/tzsh-common.pc.in \
   pc/tzsh-call.pc \
   pc/tzsh-call-service.pc \
   pc/tzsh-volume.pc \
   pc/tzsh-volume-service.pc \
   pc/tzsh-lockscreen.pc \
   pc/tzsh-lockscreen-service.pc \
   pc/tzsh-indicator.pc \
   pc/tzsh-indicator-service.pc \
   pc/tzsh-quickpanel.pc \
   pc/tzsh-quickpanel-service.pc \
   pc/tzsh-tvsrv.pc \
   pc/tzsh-tvsrv-service.pc \
   pc/tzsh-screensaver-service.pc \
   pc/tzsh-screensaver-manager-service.pc

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = \
   pc/tzsh-server.pc \
   pc/tzsh-common.pc \
   pc/tzsh-call.pc \
   pc/tzsh-call-service.pc \
   pc/tzsh-volume.pc \
   pc/tzsh-volume-service.pc \
   pc/tzsh-lockscreen.pc \
   pc/tzsh-lockscreen-service.pc \
   pc/tzsh-indicator.pc \
   pc/tzsh-indicator-service.pc \
   pc/tzsh-quickpanel.pc \
   pc/tzsh-quickpanel-service.pc \
   pc/tzsh-tvsrv.pc \
   pc/tzsh-tvsrv-service.pc \
   pc/tzsh-screensaver-service.pc \
   pc/tzsh-screensaver-manager-service.pc

SUBDIRS = src
